fixed the z-index problems in the inputs

--- a/scss/components/_imageDrop.scss
+++ b/scss/components/_imageDrop.scss
@@ -5,11 +5,12 @@
   top: 0;
   left: 0;
   width: 100vw;
+  z-index: 10;
   height: 100vh;
 }
 
 .image-drop-zone--overlay {
-  z-index: 2;
+  z-index: 10;
   pointer-events: none;
   display: flex;
   justify-content: center;
