--- a/scss/components/_slider.scss
+++ b/scss/components/_slider.scss
@@ -19,7 +19,7 @@
   }
 
   &.all-page {
-    z-index: 2;
+    z-index: 10;
   }
 
   .slider__img-container {
