--- a/scss/components/_taskManager.scss
+++ b/scss/components/_taskManager.scss
@@ -4,7 +4,7 @@ $taskMainColor: $colorBlueText;
 $taskSecondaryColor: #007aff;
 
 .task-manager__button {
-  z-index: 9;
+  z-index: 1;
   position: fixed;
   bottom: 120px;
   right: 40px;
